--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Hello World!</h1>
-<p>This is my page that i created on GitHub. </p>
+<p>This is my page that I created on GitHub. </p>
 
 </body>
 </html>
