--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<tile> Paul's Guitar Page</title>
-</head>
+ 
 <body>
-
-<h1>Hello World!</h1>
-<p>This is my page that I created on GitHub. </p>
-
+  <h1>PAUL HOLT</h1>
+  <p>Welcome to my website!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
+ 
 </html>
